# Learning_task

./: .gitignore
catkin_ws/: README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/: .clang-format
catkin_ws/src/buff_controller/: CMakeLists.txt  buff_controller_plugins.xml  package.xml
catkin_ws/src/buff_controller/cfg/: params.cfg
catkin_ws/src/buff_controller/config/: controllers.yaml
catkin_ws/src/buff_controller/include/buff_controller/: buff_controller.h
catkin_ws/src/buff_controller/launch/: load_controller.launch
catkin_ws/src/buff_controller/src/: buff_controller.cpp
catkin_ws/src/learn_description/launch/: load_buff_description.launch
catkin_ws/src/learn_description/urdf/: buff_motor.urdf.xacro
catkin_ws/src/learn_hardware/: CMakeLists.txt  package.xml
catkin_ws/src/learn_hardware/config/: buff_hw_config.yaml
catkin_ws/src/learn_hardware/launch/: buff_hw.launch
catkin_ws/src/rm_control/rm_hw/config/: buff_hw_config.yaml
catkin_ws/src/rm_control/rm_hw/launch/: rm_hw.launch
